--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "src/app.js",
   "scripts": {
+    "dev": "node src/app.js",
     "start": "nodemon",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
