--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "",
   "main": "src/app.js",
   "scripts": {
-    "dev": "node src/app.js",
-    "start": "nodemon",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon ./app.js",
+    "start": "node ./app.js"
   },
   "author": "",
   "license": "ISC",
